trunk/appointment/src/objects/Staff__c.object
<CustomObject>
    <description>Staff who provide your services.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <description>Enter a &apos;Birth Date&apos; for resource.</description>
        <inlineHelpText>Please enter a birth date for resource.</inlineHelpText>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Enter the city.</description>
        <inlineHelpText>Please enter the city.</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Enter an &apos;Email Address&apos; for resource.</description>
        <inlineHelpText>Please enter an email address for resource.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Enter the &apos;First Name&apos; for resource.</description>
        <inlineHelpText>Please enter the first name for resource.</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Then_Last_Name__c</fullName>
        <formula>IF(AND(ISBLANK(First_Name__c ),ISBLANK(Last_Name__c )), 
NULL, 
IF(ISBLANK(First_Name__c ), TRIM(Last_Name__c), TRIM(First_Name__c) &amp; &quot;, &quot; &amp; TRIM(Last_Name__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Enter a &apos;Home Phone&apos; number for resource.</description>
        <inlineHelpText>Please enter a home phone number for resource.</inlineHelpText>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Enter the &apos;Last Name&apos; for resource.</description>
        <inlineHelpText>Please enter the last name for resource.</inlineHelpText>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Then_First_Name__c</fullName>
        <formula>IF(AND(ISBLANK(Last_Name__c ),ISBLANK(First_Name__c )), 
NULL, 
IF(ISBLANK(Last_Name__c ), TRIM(First_Name__c), TRIM(Last_Name__c) &amp; &quot;, &quot; &amp; TRIM(First_Name__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>Enter the &apos;Mailing State&apos; for resource.</description>
        <inlineHelpText>Please enter the mailing state for resource.</inlineHelpText>
        <label>Mailing State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Enter a &apos;Mobile/Cell Phone&apos; number for resource.</description>
        <inlineHelpText>Please enter a mobile/cell phone number for resource.</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Settings__c</fullName>
        <description>Parmeters for the salon or business.</description>
        <label>Settings</label>
        <referenceTo>Setting__c</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff_Type__c</fullName>
        <label>Staff Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chair Renter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Enter the street address.</description>
        <inlineHelpText>Please enter the street address.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Text Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Enter the zip code.</description>
        <inlineHelpText>Please enter the zip code.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Staff ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>